google-mirror.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror
spec:
  selector:
    matchLabels:
      app: mirror
  replicas: 1
  template:
    metadata:
      labels:
        app: mirror
    spec:
      containers:
        - name: mirror
          image: starjason/docker-google-mirror
          imagePullPolicy: Always
          resources:
            requests:
              cpu: '100m'
              memory: '300Mi'
            limits:
              cpu: '800m'
              memory: '500Mi'
          ports:
            - containerPort: 80
