v2kubesail.yaml
# https://kubesail.com/template/bclswl0827/v2ray/39

apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2ray
spec:
  selector:
    matchLabels:
      app: v2ray
  replicas: 1
  template:
    metadata:
      labels:
        app: v2ray
    spec:
      containers:
        - name: v2ray
          #image: bclswl0827/v2ray-openshift
          image: starjason/v2tizi
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1m
              memory: 8Mi
            limits:
              cpu: 2m
              memory: 16Mi
          ports:
            - containerPort: 8080
