mirror-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirror
  namespace: hbstarjason
spec:
  ports:
  - name: mirror
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
