mirror-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirror
  namespace: hbstarjason
spec:
  ports:
  - name: mirror
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/auto-ingress: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rpm: "200"
    nginx.ingress.kubernetes.io/limit-rps: "20"
  generation: 1
  name: okteto-mirror
  namespace: hbstarjason
spec:
  rules:
  - host: mirror-hbstarjason.cloud.okteto.net
    http:
      paths:
      - backend:
          serviceName: mirror
          servicePort: 80
        path: /
  tls:
  - hosts:
    - mirror-hbstarjason.cloud.okteto.net
